fix alignment and display issues on different screen sizes

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -15,7 +15,6 @@
 
 .title {
   margin-top: 12rem;
-  margin-right: 25%;
   font-size: 600%;
   background: linear-gradient(285deg, #fff0bb 34.7%, #faa3bd 79.88%);
   background-clip: text;
